# copyright

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  README.md  lint.sh  readme.md  requirements.txt
application/: CMakeLists.txt  application.cpp  application.hpp  copyright  copyright.txt  main.cpp
copyright/: CMakeLists.txt  application.cpp
